added update post and password validate
